# umeqam-runtime-guardrail

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_run.py
docs/: gateway_architecture.md
examples/: langchain_demo.py  simple_usage.py  streamlit_demo.py
src/: __init__.py  audit_logger.py  langchain_integration.py  umeqam_risk_core.py
src/umeqam/epistemic/: acci_lite.py  adaptive_threshold.py  cross_model_consistency.py  ecd_conflict_detector.py  false_world_detector.py  multi_lens_engine.py  risk_aggregator.py  risk_trace.py
src/umeqam/gateway/: app.py  policy.py  risk_policy_engine.py
src/umeqam/gateway/routes/: analyze.py  chat.py  health.py
src/umeqam_runtime_guardrail/: guardrail.py
umeqam_runtime_guardrail/: __init__.py  guardrail.py
