[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umeqam-runtime-guardrail"
version = "0.1.0"
description = "Deterministic runtime epistemic guardrail for LLM pipelines under EU AI Act"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Umeqam"}]
dependencies = [
    "numpy",
    "langchain-core",
    "langchain-openai",
    "streamlit"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

